log
Wed 27 Mar 2024 05:47:51 PM UTC: 
 tests:  0|6
total_score: 0/70
a487349
Wed 27 Mar 2024 05:58:01 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: unused variable ‘new’ [-Werror=unused-variable]
   33 |   List * new = (List *) malloc (sizeof(List));
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
9d09888
Wed 27 Mar 2024 05:58:54 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
d4a3767
Wed 27 Mar 2024 05:59:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
99cc190
Wed 27 Mar 2024 06:01:29 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:12: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   43 |   if (list -> size == 0)
      |            ^~
Compilation failed
c87079e
Wed 27 Mar 2024 06:01:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d17c787
Wed 27 Mar 2024 06:02:09 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
503ce71
Wed 27 Mar 2024 06:02:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f1056d
Wed 27 Mar 2024 06:11:30 PM UTC: 
 list.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
472c909
Wed 27 Mar 2024 06:11:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eb95ef7
Wed 27 Mar 2024 06:15:32 PM UTC: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
448caa4
Wed 27 Mar 2024 06:16:49 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a3ee6ea
Wed 27 Mar 2024 06:17:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f9eb0ac
Wed 27 Mar 2024 06:42:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3a4b6ab
Wed 27 Mar 2024 06:42:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cf2666f
Wed 27 Mar 2024 06:43:35 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
28b4a07
Wed 27 Mar 2024 06:44:53 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
cf0ec5e
Wed 27 Mar 2024 06:53:12 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:91:21: error: too few arguments to function ‘createNode’
   91 |   Node *nodoNuevo = createNode();
      |                     ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
Compilation failed
c5fa471
Wed 27 Mar 2024 06:54:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
aa12a0d
Wed 27 Mar 2024 07:04:06 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
6830bdd
Wed 27 Mar 2024 07:13:32 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  9|3
total_score: 35/70
d2e46c6
Wed 27 Mar 2024 07:14:41 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
2008e40
